tests/fixtures/valid/final_expr_if_with_returns.torel
unit fixtures.final_expr_if_with_returns;

export proc main() -> Int32 {
    if true {
        return 1;
    } else {
        2
    }
}
