tests/fixtures/invalid/while_missing_return.torel
unit fixtures.while_missing_return;

export proc main() -> Int32 {
    while true {
        return 42;
    }
}
